# crc-fast

./: README.md  crc-fast.cabal
src/: #Main.hs#  .#Main.hs  Main.hs  Main.hs~
src/Foreign/: CRC.hs  CRC.hs~
src/Foreign/CRC/: Internal.hs
test/Foreign/: CRCSpec.hs
